Currency + FreightTerm added to data model

--- a/Source/CriticalPath.Data/CriticalPath.Data.csproj
+++ b/Source/CriticalPath.Data/CriticalPath.Data.csproj
@@ -64,7 +64,13 @@
     <Compile Include="Contact.cs">
       <DependentUpon>CriticalPathModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Currency.cs">
+      <DependentUpon>CriticalPathModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Customer.cs">
+      <DependentUpon>CriticalPathModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FreightTerm.cs">
       <DependentUpon>CriticalPathModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Manufacturer.cs">
